--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <body>
     <header>
             <div class="header-container">
-                <img src="Økonomi/Logo uten tekst.png" alt="Landa Ozonservice Logo" class="logo">
+                <img src="Logo uten tekst.png" alt="Landa Ozonservice Logo" class="logo">
                 <div class="header-text">
                     <h1>Landa Ozonservice</h1>
                     <h2>Luktfritt. Hygiensk. Miljøvennlig</h2>
