--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="Logo.png" alt="Landa Ozonservice Logo" class="logo">
+            <img src="https://landaozonservice.github.io/Landa-Ozonservice/Logo.png" alt="Landa Ozonservice Logo" class="logo">
             <div class="header-text">
                 <h1>Landa Ozonservice</h1>
                 <h2>Luktfritt. Hygiensk. Miljøvennlig</h2>
