--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-    <meta name="google-site-verification" content="bn2C3t2c0h8CyqTnYEzkLOcxG6jBjIAdyj1IPSXbPH4" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landa Ozonservice</title>
+    <meta name="google-site-verification" content="bn2C3t2c0h8CyqTnYEzkLOcxG6jBjIAdyj1IPSXbPH4" />
+    <meta name="description" content="Landa Ozonservice tilbyr profesjonell luktfjerning og ozonbehandling for biler, boliger og næringslokaler i Nord-Jæren. Effektiv, miljøvennlig og trygg luktfjerning.">
+    <meta name="keywords" content="ozonbehandling, luktfjerning, profesjonell luktfjerning, fjerne røyklukt, ozon, muggfjerning, luktfri bolig, Nord-Jæren, Sandnes, Stavanger, Sola, Randaberg, Jæren">
+    <meta name="author" content="Landa Ozonservice">
+    <meta property="og:title" content="Landa Ozonservice - Profesjonell Luktfjerning i Nord-Jæren">
+    <meta property="og:description" content="Vi tilbyr profesjonell luktfjerning ved bruk av ozon. Effektiv fjerning av røyklukt, mugg og andre uønskede lukter i Nord-Jæren.">
+    <meta property="og:image" content="https://landaozonservice.github.io/Landa-Ozonservice/Logo.png">
+    <meta property="og:url" content="https://landaozonservice.no/">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://landaozonservice.no/">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>Landa Ozonservice - Profesjonell Luktfjerning</title>
+    
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "LocalBusiness",
+            "name": "Landa Ozonservice",
+            "image": "https://landaozonservice.github.io/Landa-Ozonservice/Logo.png",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "Solaveien 68f",
+                "addressLocality": "Sandnes",
+                "postalCode": "4316",
+                "addressCountry": "NO"
+            },
+            "telephone": "+47 948 48 271",
+            "email": "post@landaozonservice.no",
+            "url": "https://landaozonservice.no/",
+            "description": "Landa Ozonservice tilbyr profesjonell luktfjerning og ozonbehandling for både private og næringslokaler. Effektiv og miljøvennlig luktfjerning i Nord-Jæren.",
+            "areaServed": {
+                "@type": "Place",
+                "name": "Nord-Jæren",
+                "geo": {
+                    "@type": "GeoCoordinates",
+                    "latitude": "58.9690", 
+                    "longitude": "5.7332"
+                }
+            }
+        }
+    </script>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -17,8 +56,7 @@
         header {
             background-color: #ab8f65;
             color: white;
-            padding: 0.2rem 0.5rem; /* Mindre padding for å redusere tomrom */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 0.5rem;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -33,9 +71,9 @@
         }
 
         .logo {
-            max-height: 250px; /* Redusert høyde for å spare plass */
+            max-height: 250px;
             height: auto;
-            margin-right: 225px; /* Mindre mellomrom */
+            margin-right: 225px;
         }
 
         .header-text {
@@ -47,15 +85,15 @@
         }
 
         .header-text h1 {
-            margin: 0; /* Fjernet ekstra mellomrom */
-            color: black; /* Gjør "Landa Ozonservice" svart */
-            font-size: 2.5rem; /* Justert skriftstørrelse */
+            margin: 0;
+            color: black;
+            font-size: 2.5rem;
             font-weight: bold;
         }
 
         .header-text h2,
         .header-text p {
-            margin: 0; /* Fjernet ekstra margin */
+            margin: 0;
             color: white;
         }
 
@@ -64,11 +102,12 @@
             justify-content: center;
             background-color: #333;
             padding: 1rem;
+            flex-wrap: wrap;
         }
 
         nav a {
             color: white;
-            padding: 1rem 2rem;
+            padding: 1rem;
             text-decoration: none;
             font-size: 1.1rem;
             transition: background 0.3s;
@@ -81,7 +120,7 @@
 
         .container {
             max-width: 800px;
-            margin: 3rem auto;
+            margin: 2rem auto;
             padding: 2rem;
             background: white;
             border-radius: 8px;
@@ -91,11 +130,6 @@
 
         .active {
             display: block;
-        }
-
-        h2 {
-            text-align: center;
-            color: #5a4b36;
         }
 
         form {
@@ -134,23 +168,7 @@
         }
 
         button:hover {
-            background-color: #5a4b36;
-        }
-
-        footer {
-            text-align: center;
-            padding: 2rem;
-            background: #ab8f65;
-            margin-top: 2rem;
-        }
-        <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tekstboks til høyre</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            background-color: #4a3e2c;
         }
 
         .text-box {
@@ -165,12 +183,46 @@
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
+
+        footer {
+            text-align: center;
+            padding: 2rem;
+            background: #ab8f65;
+            margin-top: 2rem;
+        }
+
+        @media (max-width: 768px) {
+            .header-container {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .logo {
+                margin-right: 0;
+                max-height: 150px;
+            }
+
+            nav a {
+                padding: 0.5rem;
+                font-size: 1rem;
+            }
+
+            .container {
+                margin: 1rem;
+                padding: 1rem;
+            }
+
+            .text-box {
+                width: 90%;
+                margin: 1rem auto;
+            }
+        }
     </style>
 </head>
 <body>
     <header>
         <div class="header-container">
-            <img src="https://landaozonservice.github.io/Landa-Ozonservice/Logo.png" alt="Landa Ozonservice Logo" class="logo">
+            <img src="Logo/Logo.png" alt="Landa Ozonservice Logo" class="logo" loading="lazy">
             <div class="header-text">
                 <h1>Landa Ozonservice</h1>
                 <h2>Luktfritt. Hygiensk. Miljøvennlig</h2>
@@ -187,20 +239,20 @@
         <a href="#" onclick="showSection('contact')">Kontakt</a>
     </nav>
 
-    <div class="container active" id="home">
+    <section class="container active" id="home">
         <h2>Luktfjerning på effektiv og økonomisk måte</h2>
         <p>Vi tilbyr profesjonelle ozonbehandlinger for både private og bedrifter.</p>
         <p>Sliter du med kjellerlukt, røyklukt, lukt fra dyr, og andre typer lukter som ikke gir seg? Vi kan hjelpe deg med nettopp dette!</p>
-    </div>
+    </section>
 
-    <div class="container" id="services">
+    <section class="container" id="services">
         <h2>Tjenester</h2>
         <p>Vi tilbyr ozonbehandlinger for privatpersoner og bedrifter. Vi har fornøydgaranti: Er ikke lukten helt borte etter en behandling, kommer vi tilbake og gjør en ny kostnadsfri behandling</p>
         <h3>Hvilke lukter kan vi fjerne?</h3>
         <p>I hovedsak alle typer lukter, her er noen eksempler:</p>
         <ul>
             <li>Røyk- og nikotinlukt</li>
-            <li>Lukt etter brann/vannskader</li>
+            <li>Lukt etter brann- og vannskader</li>
             <li>Lukt fra mugg- og fuktskader</li>
             <li>Dyrelukt</li>
             <li>Mat- og stekelukt</li>
@@ -208,28 +260,30 @@
             <li>Bil- og båtlukt</li>
         <h2>Veiledende priser</h2>
         <ul>
-            <li>Bil: 1500,-</li>
-            <li>Bobil: 2500,-</li>
+            <li>Bil: 1000,-</li>
+            <li>Bobil: 2000,-</li>
             <li>Leilighet opp til 60kvm: 3000,-</li>
             <li>Leilighet over 60kvm: 4000,-</li>
             <li>Enebolig over flere etasjer: 5000,-</li>
         </ul>
-    </div>
-    <div class="container" id="ozon">
+    </section>
+
+    <section class="container" id="ozon">
         <h2>Om ozon</h2>
         <h3>Hva er ozon?</h3>
-        <p>Ozon (O₃) er en naturlig gass som er effektiv for å rense luft og eliminere uønskede lukter. Det er en oksidant som bryter ned luktmolekyler, bakterier og muggsporer, dette betyr at den faktisk fjerner lukten og ikke bare midlertidig maskerer som mange andre behandlinger. 
+        <p>Ozon (O₃) er en naturlig gass. Det er en effektiv og miljøvennlig metode for å rense luft og overflater og dermed eliminere uønskede lukter. Det er en oksidant som bryter ned luktmolekyler, bakterier og muggsporer, dette betyr at den faktisk fjerner lukten og ikke bare midlertidig maskerer som mange andre behandlinger. 
         <p>Ozongassen kan nemmelig komme til overalt, bak lister, inn i inventar og alle andre plasser vi mennesker ikke kommer til, men der lukten likevell sitter.</p>
         <h3>Er ozon farlig?</h3>
         <p>Ja, men kun hvis det brukes feil! Ozongass er helseskadelig for alt levende og bør håndteres av profesjonelle. Det er ikke uten grunn at miljødirektoratet forbyr salg av ozongeneratorer til privatpersoner.</p>
-    </div>
+    </section>
 
-    <div class="container" id="about">
+    <section class="container" id="about">
         <h2>Om oss</h2>
-        <p>Vi er et innovativt firma som bruker moderne teknologi for å oppnå de beste resultatene innen ozonbehandling og luktfjerning. Vi er serviceinnsilt og villig til å strekke oss langt for å oppnå fornøyde kunder.</p>
-    </div>
+        <p>Landa Ozonservice er et lokalt firma som spesialiserer seg på luktfjerning ved bruk av ozongass. Vi har god kunnskap innenfor faget og setter kundens behov i fokus.</p>
+        <p>Vår visjon er å tilby et luktfritt og hygienisk miljø på en trygg og miljøvennlig måte.</p>
+    </section>
 
-    <div class="container" id="contact">
+    <section class="container" id="contact">
         <h2>Kontakt oss</h2>
         <p>Fyll ut skjema for hendvendelser</p>
     <div class="text-box">
@@ -251,7 +305,7 @@
             <textarea id="Melding" name="Melding" rows="4" required></textarea>
             <button type="submit">Send inn</button>
         </form>
-    </div>
+    </section>
 
     <footer>
         <p>&copy; 2025 Landa Ozonservice | Org.nummer: 935 093 775</p>
@@ -259,11 +313,12 @@
 
     <script>
         function showSection(sectionId) {
-            var sections = document.querySelectorAll('.container');
-            sections.forEach(function(section) {
+            var target = document.getElementById(sectionId);
+            if (!target) return;
+            document.querySelectorAll('.container').forEach(function(section) {
                 section.classList.remove('active');
             });
-            document.getElementById(sectionId).classList.add('active');
+            target.classList.add('active');
         }
     </script>
 </body>
