--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
             "telephone": "+47 948 48 271",
             "email": "post@landaozonservice.no",
             "url": "https://landaozonservice.no/",
-            "description": "Landa Ozonservice tilbyr profesjonell luktfjerning og ozonbehandling for både private og næringslokaler. Effektiv og miljøvennlig luktfjerning i Nord-Jæren.",
-            "areaServed": {
-                "@type": "Place",
-                "name": "Nord-Jæren",
-                "geo": {
-                    "@type": "GeoCoordinates",
-                    "latitude": "58.9690", 
-                    "longitude": "5.7332"
-                }
+           "description": "Landa Ozonservice tilbyr luktfjerning med ozon i Sandnes og Nord-Jæren. Effektiv fjerning av røyklukt og mugg for både private og bedrifter.",
+  "areaServed": [
+    { "@type": "Place", "name": "Sandnes" },
+    { "@type": "Place", "name": "Stavanger" },
+    { "@type": "Place", "name": "Sola" },
+    { "@type": "Place", "name": "Randaberg" }
+    { "@type": "Place", "name": "Nord-jæren" }
+    { "@type": "Place", "name": "Klepp" }
+    { "@type": "Place", "name": "Bryne" }
+  ]
             }
-        }
     </script>
     <style>
         body {
