--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     { "@type": "Place", "name": "Stavanger" },
     { "@type": "Place", "name": "Sola" },
     { "@type": "Place", "name": "Randaberg" }
-    { "@type": "Place", "name": "Nord-jæren" }
+   { "@type": "Place", "name": "Nord-Jæren" }
     { "@type": "Place", "name": "Klepp" }
     { "@type": "Place", "name": "Bryne" }
   ]
