--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
+            "@type": "WebSite",
             "@type": "LocalBusiness",
             "name": "Landa Ozonservice",
             "image": "https://landaozonservice.github.io/Landa-Ozonservice/Logo.png",
