--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
         <ul>
             <li>Bil: 1000,-</li>
             <li>Bobil: 2000,-</li>
+            <li>Båt: 2000,-</li>
             <li>Leilighet opp til 60kvm: 3000,-</li>
             <li>Leilighet over 60kvm: 4000,-</li>
             <li>Enebolig over flere etasjer: 5000,-</li>
