--- a/index.html
+++ b/index.html
@@ -1,49 +1,72 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="bn2C3t2c0h8CyqTnYEzkLOcxG6jBjIAdyj1IPSXbPH4" />
-    <meta name="description" content="Landa Ozonservice tilbyr profesjonell luktfjerning og ozonbehandling for biler, boliger og næringslokaler i Nord-Jæren. Effektiv, miljøvennlig og trygg luktfjerning.">
-    <meta name="keywords" content="ozonbehandling, luktfjerning, profesjonell luktfjerning, fjerne røyklukt, ozon, muggfjerning, luktfri bolig, Nord-Jæren, Sandnes, Stavanger, Sola, Randaberg, Jæren">
-    <meta name="author" content="Landa Ozonservice">
-    <meta property="og:title" content="Landa Ozonservice - Profesjonell Luktfjerning i Nord-Jæren">
-    <meta property="og:description" content="Vi tilbyr profesjonell luktfjerning ved bruk av ozon. Effektiv fjerning av røyklukt, mugg og andre uønskede lukter i Nord-Jæren.">
-    <meta property="og:image" content="https://landaozonservice.github.io/Landa-Ozonservice/Logo.png">
-    <meta property="og:url" content="https://landaozonservice.no/">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://landaozonservice.no/">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>Landa Ozonservice - Profesjonell Luktfjerning</title>
-    
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "WebSite",
-            "@type": "LocalBusiness",
-            "name": "Landa Ozonservice",
-            "image": "https://landaozonservice.github.io/Landa-Ozonservice/Logo.png",
-            "address": {
-                "@type": "PostalAddress",
-                "streetAddress": "Solaveien 68f",
-                "addressLocality": "Sandnes",
-                "postalCode": "4316",
-                "addressCountry": "NO"
-            },
-            "telephone": "+47 948 48 271",
-            "email": "post@landaozonservice.no",
-            "url": "https://landaozonservice.no/",
-           "description": "Landa Ozonservice tilbyr luktfjerning med ozon i Sandnes og Nord-Jæren. Effektiv fjerning av røyklukt og mugg for både private og bedrifter.",
-  "areaServed": [
-  { "@type": "Place", "name": "Sandnes" },
-  { "@type": "Place", "name": "Stavanger" },
-  { "@type": "Place", "name": "Sola" },
-  { "@type": "Place", "name": "Randaberg" },
-  { "@type": "Place", "name": "Klepp" },
-  { "@type": "Place", "name": "Bryne" },
-  { "@type": "Place", "name": "Nord-Jæren" }
-]
-            }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="bn2C3t2c0h8CyqTnYEzkLOcxG6jBjIAdyj1IPSXbPH4" />
+  <meta name="description" content="Landa Ozonservice tilbyr profesjonell luktfjerning og ozonbehandling for biler, boliger og næringslokaler i Nord-Jæren. Effektiv, miljøvennlig og trygg luktfjerning.">
+  <meta name="keywords" content="ozonbehandling, luktfjerning, profesjonell luktfjerning, fjerne røyklukt, ozon, muggfjerning, luktfri bolig, Nord-Jæren, Sandnes, Stavanger, Sola, Randaberg, Jæren">
+  <meta name="author" content="Landa Ozonservice">
+  <meta property="og:title" content="Landa Ozonservice - Profesjonell Luktfjerning i Nord-Jæren">
+  <meta property="og:description" content="Vi tilbyr profesjonell luktfjerning ved bruk av ozon. Effektiv fjerning av røyklukt, mugg og andre uønskede lukter i Nord-Jæren.">
+  <meta property="og:image" content="https://landaozonservice.github.io/Landa-Ozonservice/Logo.png">
+  <meta property="og:url" content="https://landaozonservice.no/">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://landaozonservice.no/">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <title>Landa Ozonservice - Profesjonell Luktfjerning</title>
+
+  <!-- WebSite schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Landa Ozonservice",
+    "url": "https://landaozonservice.no"
+  }
+  </script>
+
+  <!-- Organization schema (for logo og navn i søk) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Landa Ozonservice",
+    "url": "https://landaozonservice.no",
+    "logo": "https://landaozonservice.github.io/Landa-Ozonservice/Logo.png"
+  }
+  </script>
+
+  <!-- LocalBusiness schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Landa Ozonservice",
+    "image": "https://landaozonservice.github.io/Landa-Ozonservice/Logo.png",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Solaveien 68f",
+      "addressLocality": "Sandnes",
+      "postalCode": "4316",
+      "addressCountry": "NO"
+    },
+    "telephone": "+47 948 48 271",
+    "email": "post@landaozonservice.no",
+    "url": "https://landaozonservice.no/",
+    "description": "Landa Ozonservice tilbyr luktfjerning med ozon i Sandnes og Nord-Jæren. Effektiv fjerning av røyklukt og mugg for både private og bedrifter.",
+    "areaServed": [
+      { "@type": "Place", "name": "Sandnes" },
+      { "@type": "Place", "name": "Stavanger" },
+      { "@type": "Place", "name": "Sola" },
+      { "@type": "Place", "name": "Randaberg" },
+      { "@type": "Place", "name": "Klepp" },
+      { "@type": "Place", "name": "Bryne" },
+      { "@type": "Place", "name": "Nord-Jæren" }
+    ]
+  }
+  </script>
+</head>
     </script>
     <style>
         body {
