--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://landaozonservice.no/">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <title>Landa Ozonservice - Profesjonell Luktfjerning</title>
+  <title>Landa Ozonservice - Profesjonell Luktfjerning i Rogaland</title>
+
 
   <!-- WebSite schema -->
   <script type="application/ld+json">
@@ -284,7 +285,7 @@
 
     <section class="container active" id="home">
         <h2>Luktfjerning på effektiv og økonomisk måte</h2>
-        <p>Vi tilbyr profesjonelle ozonbehandlinger for både private og bedrifter.</p>
+        <p>Vi tilbyr profesjonelle ozonbehandlinger for både private og bedrifter i Rogalandsområdet.</p>
         <p>Sliter du med kjellerlukt, røyklukt, lukt fra dyr, og andre typer lukter som ikke gir seg? Vi kan hjelpe deg med nettopp dette!</p>
     </section>
 
