--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
     <section class="container active" id="home">
         <h2>Luktfjerning på effektiv og økonomisk måte</h2>
-        <p>Vi tilbyr profesjonelle ozonbehandlinger for både private og bedrifter i Rogalandsområdet.</p>
+        <p>Vi tilbyr profesjonelle ozonbehandlinger for både private og bedrifter i Rogaland.</p>
         <p>Sliter du med kjellerlukt, røyklukt, lukt fra dyr, og andre typer lukter som ikke gir seg? Vi kan hjelpe deg med nettopp dette!</p>
     </section>
 
