--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="bn2C3t2c0h8CyqTnYEzkLOcxG6jBjIAdyj1IPSXbPH4" />
-  <meta name="description" content="Landa Ozonservice tilbyr profesjonell luktfjerning og ozonbehandling for biler, boliger og næringslokaler i Nord-Jæren. Effektiv, miljøvennlig og trygg luktfjerning.">
-  <meta name="keywords" content="ozonbehandling, luktfjerning, profesjonell luktfjerning, fjerne røyklukt, ozon, muggfjerning, luktfri bolig, Nord-Jæren, Sandnes, Stavanger, Sola, Randaberg, Jæren">
+  <meta name="description" content="Landa Ozonservice tilbyr profesjonell luktfjerning og ozonbehandling for biler, boliger og næringslokaler i Rogaland. Effektiv, miljøvennlig og trygg luktfjerning.">
+  <meta name="keywords" content="ozonbehandling, luktfjerning, profesjonell luktfjerning, fjerne røyklukt, ozon, muggfjerning, luktfri bolig, Nord-Jæren, Rogaland, Sandnes, Stavanger, Sola, Randaberg, Jæren">
   <meta name="author" content="Landa Ozonservice">
-  <meta property="og:title" content="Landa Ozonservice - Profesjonell Luktfjerning i Nord-Jæren">
-  <meta property="og:description" content="Vi tilbyr profesjonell luktfjerning ved bruk av ozon. Effektiv fjerning av røyklukt, mugg og andre uønskede lukter i Nord-Jæren.">
+  <meta property="og:title" content="Landa Ozonservice - Profesjonell Luktfjerning i Rogaland">
+  <meta property="og:description" content="Vi tilbyr profesjonell luktfjerning ved bruk av ozon. Effektiv fjerning av røyklukt, mugg og andre uønskede lukter i Rogaland.">
   <meta property="og:image" content="https://landaozonservice.github.io/Landa-Ozonservice/Logo.png">
   <meta property="og:url" content="https://landaozonservice.no/">
   <meta name="robots" content="index, follow">
@@ -64,7 +64,7 @@
     "telephone": "+47 948 48 271",
     "email": "post@landaozonservice.no",
     "url": "https://landaozonservice.no/",
-    "description": "Landa Ozonservice tilbyr luktfjerning med ozon i Sandnes og Nord-Jæren. Effektiv fjerning av røyklukt og mugg for både private og bedrifter.",
+    "description": "Landa Ozonservice tilbyr luktfjerning med ozon i Rogaland og Nord-Jæren. Effektiv fjerning av røyklukt og mugg for både private og bedrifter.",
     "areaServed": [
       { "@type": "Place", "name": "Sandnes" },
       { "@type": "Place", "name": "Stavanger" },
@@ -73,6 +73,7 @@
       { "@type": "Place", "name": "Klepp" },
       { "@type": "Place", "name": "Bryne" },
       { "@type": "Place", "name": "Nord-Jæren" }
+      { "@type": "Place", "name": "Rogaland" },
     ]
   }
   </script>
@@ -291,7 +292,7 @@
 
     <section class="container" id="services">
         <h2>Tjenester</h2>
-        <p>Vi tilbyr ozonbehandlinger for privatpersoner og bedrifter. Vi har fornøydgaranti: Er ikke lukten helt borte etter en behandling, kommer vi tilbake og gjør en ny kostnadsfri behandling</p>
+        <p>Vi tilbyr ozonbehandlinger for privatpersoner og bedrifter i Rogaland. Vi har fornøydgaranti: Er ikke lukten helt borte etter en behandling, kommer vi tilbake og gjør en ny kostnadsfri behandling</p>
         <h3>Hvilke lukter kan vi fjerne?</h3>
         <p>I hovedsak alle typer lukter, her er noen eksempler:</p>
         <ul>
@@ -303,6 +304,7 @@
             <li>Kjemiske lukter og avgasser</li>
             <li>Bil- og båtlukt</li>
         <h2>Veiledende priser</h2>
+        <p>Tillegg for reise utenfor Nord-Jæren kan forekomme, dette blir avtalt i forkant</p>
         <ul>
             <li>Bil: 1000,-</li>
             <li>Bobil: 2000,-</li>
@@ -324,7 +326,7 @@
 
     <section class="container" id="about">
         <h2>Om oss</h2>
-        <p>Landa Ozonservice er et lokalt firma som spesialiserer seg på luktfjerning ved bruk av ozongass. Vi har god kunnskap innenfor faget og setter kundens behov i fokus.</p>
+        <p>Landa Ozonservice er et lokalt firma som opererer i Rogaland og spesialiserer seg på luktfjerning ved bruk av ozongass. Vi har god kunnskap innenfor faget og setter kundens behov i fokus.</p>
         <p>Vår visjon er å tilby et luktfritt og hygienisk miljø på en trygg og miljøvennlig måte.</p>
     </section>
 
@@ -353,7 +355,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Landa Ozonservice | Org.nummer: 935 093 775</p>
+        <p>&copy; 2025 Landa Ozonservice | Org.nummer: 935 093 775 | 4316 Sandnes</p>
     </footer>
 
     <script>
