--- a/index.html
+++ b/index.html
@@ -324,12 +324,21 @@
         <p>Ja, men kun hvis det brukes feil! Ozongass er helseskadelig for alt levende og bør håndteres av profesjonelle. Det er ikke uten grunn at miljødirektoratet forbyr salg av ozongeneratorer til privatpersoner.</p>
     </section>
 
-    <section class="container" id="about">
+   <section class="container" id="about" style="display: flex; flex-wrap: wrap; align-items: center; gap: 20px;">
+    <div style="flex: 1 1 300px; max-width: 400px;">
+        <img 
+            src="https://github.com/LandaOzonservice/Landa-Ozonservice/blob/main/Bilde.jpeg?raw=true" 
+            alt="Landa Ozonservice bilde" 
+            style="width: 100%; height: auto; border-radius: 8px;"
+        >
+    </div>
+    <div style="flex: 2 1 400px;">
         <h2>Om oss</h2>
-        <img src="https://github.com/LandaOzonservice/Landa-Ozonservice/blob/main/Bilde.jpeg?raw=true" alt="Landa Ozonservice bilde" width="300">
         <p>Landa Ozonservice er et lokalt firma som opererer i Rogaland og spesialiserer seg på luktfjerning ved bruk av ozongass. Vi har god kunnskap innenfor faget og setter kundens behov i fokus.</p>
         <p>Vår visjon er å tilby et luktfritt og hygienisk miljø på en trygg og miljøvennlig måte.</p>
-    </section>
+    </div>
+</section>
+
 
     <section class="container" id="contact">
         <h2>Kontakt oss</h2>
