--- a/index.html
+++ b/index.html
@@ -324,12 +324,26 @@
         <p>Ja, men kun hvis det brukes feil! Ozongass er helseskadelig for alt levende og bør håndteres av profesjonelle. Det er ikke uten grunn at miljødirektoratet forbyr salg av ozongeneratorer til privatpersoner.</p>
     </section>
 
-   <section class="container" id="about">
-        <h2>Om oss</h2>
-        <p>Landa Ozonservice er et lokalt firma som opererer i Rogaland og spesialiserer seg på luktfjerning ved bruk av ozongass. Vi har god kunnskap innenfor faget og setter kundens behov i fokus.</p>
-        <p>Vår visjon er å tilby et luktfritt og hygienisk miljø på en trygg og miljøvennlig måte.</p>
-         <img src="https://github.com/LandaOzonservice/Landa-Ozonservice/blob/main/Bilde.jpeg?raw=true" alt="Landa Ozonservice bilde" width="300">
-    </section>
+     <section class="container" id="about" style="padding: 20px 0;">
+    <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 20px; max-width: 1000px; margin: 0 auto;">
+        <div style="flex: 1 1 300px; max-width: 400px;">
+            <img 
+                src="https://github.com/LandaOzonservice/Landa-Ozonservice/blob/main/Bilde.jpeg?raw=true" 
+                alt="Landa Ozonservice bilde" 
+                style="width: 100%; height: auto; border-radius: 8px;"
+            >
+        </div>
+        <div style="flex: 2 1 400px;">
+            <h2>Om oss</h2>
+            <p>
+                Landa Ozonservice er et lokalt firma som opererer i Rogaland og spesialiserer seg på luktfjerning ved bruk av ozongass. Vi har god kunnskap innenfor faget og setter kundens behov i fokus.
+            </p>
+            <p>
+                Vår visjon er å tilby et luktfritt og hygienisk miljø på en trygg og miljøvennlig måte.
+            </p>
+        </div>
+    </div>
+</section>
 
     <section class="container" id="contact">
         <h2>Kontakt oss</h2>
