--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
     "url": "https://landaozonservice.no/",
     "description": "Landa Ozonservice tilbyr luktfjerning med ozon i Rogaland og Nord-Jæren. Effektiv fjerning av røyklukt og mugg for både private og bedrifter.",
     "areaServed": [
-      { "@type": "Place", "name": "Sandnes" },
-      { "@type": "Place", "name": "Stavanger" },
-      { "@type": "Place", "name": "Sola" },
-      { "@type": "Place", "name": "Randaberg" },
-      { "@type": "Place", "name": "Klepp" },
-      { "@type": "Place", "name": "Bryne" },
-      { "@type": "Place", "name": "Nord-Jæren" }
-      { "@type": "Place", "name": "Rogaland" },
-    ]
+  { "@type": "Place", "name": "Sandnes" },
+  { "@type": "Place", "name": "Stavanger" },
+  { "@type": "Place", "name": "Sola" },
+  { "@type": "Place", "name": "Randaberg" },
+  { "@type": "Place", "name": "Klepp" },
+  { "@type": "Place", "name": "Bryne" },
+  { "@type": "Place", "name": "Nord-Jæren" },
+  { "@type": "Place", "name": "Rogaland" }
+]
   }
   </script>
 </head>
