--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 <body>
     <header>
         <div class="header-container">
-           <img src="https://landaozonservice.github.io/Landa-Ozonservice/Logo.png" alt="Landa Ozonservice Logo" class="logo">
+           <img src="https://landaozonservice.github.io/Landa-Ozonservice/logo-landa-ozonservice-luktfjerning-miljovennlig.png" alt="Landa Ozonservice – spesialist på luktfjerning med ozon" class="logo">
             <div class="header-text">
                 <h1>Landa Ozonservice</h1>
                 <h2>Luktfritt. Hygiensk. Miljøvennlig</h2>
@@ -328,8 +328,8 @@
     <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 20px; max-width: 1000px; margin: 0 auto;">
         <div style="flex: 1 1 300px; max-width: 400px;">
             <img 
-                src="https://github.com/LandaOzonservice/Landa-Ozonservice/blob/main/Bilde.jpeg?raw=true" 
-                alt="Landa Ozonservice bilde" 
+                src="https://github.com/LandaOzonservice/Landa-Ozonservice/blob/main/ozon-tekniker-landa-bil-luktfjerning.jpeg?raw=true" 
+                alt="Landa Ozonservice-tekniker foran bil – spesialist på luktfjerning og rens av inneluft" 
                 style="width: 100%; height: auto; border-radius: 8px;"
             >
         </div>
