--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="bn2C3t2c0h8CyqTnYEzkLOcxG6jBjIAdyj1IPSXbPH4" />
-  <meta name="description" content="Landa Ozonservice tilbyr profesjonell luktfjerning og ozonbehandling for biler, boliger og næringslokaler i Rogaland. Effektiv, miljøvennlig og trygg luktfjerning.">
-  <meta name="keywords" content="ozonbehandling, luktfjerning, profesjonell luktfjerning, fjerne røyklukt, ozon, muggfjerning, luktfri bolig, Nord-Jæren, Rogaland, Sandnes, Stavanger, Sola, Randaberg, Jæren">
+  <meta name="description" content="Landa Ozonservice tilbyr profesjonell luktfjerning og ozonbehandling for biler, boliger og næringslokaler i og rundt Evenes. Effektiv, miljøvennlig og trygg luktfjerning.">
+  <meta name="keywords" content="ozonbehandling, luktfjerning, profesjonell luktfjerning, fjerne røyklukt, ozon, muggfjerning, luktfri bolig, Evenes, Fjelldal, Tjeldsund, Harstad, Narvik, Bjerkvik, Sortland">
   <meta name="author" content="Landa Ozonservice">
-  <meta property="og:title" content="Landa Ozonservice - Profesjonell Luktfjerning i Rogaland">
-  <meta property="og:description" content="Vi tilbyr profesjonell luktfjerning ved bruk av ozon. Effektiv fjerning av røyklukt, mugg og andre uønskede lukter i Rogaland.">
+  <meta property="og:title" content="Landa Ozonservice - Profesjonell Luktfjerning i og rundt Evenes">
+  <meta property="og:description" content="Vi tilbyr profesjonell luktfjerning ved bruk av ozon. Effektiv fjerning av røyklukt, mugg og andre uønskede lukter i og rundt Evenes.">
   <meta property="og:image" content="https://landaozonservice.github.io/Landa-Ozonservice/Logo.png">
   <meta property="og:url" content="https://landaozonservice.no/">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://landaozonservice.no/">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <title>Landa Ozonservice - Profesjonell Luktfjerning i Rogaland</title>
+  <title>Landa Ozonservice - Profesjonell Luktfjerning i og rundt Evenes</title>
 
 
   <!-- WebSite schema -->
@@ -64,16 +64,16 @@
     "telephone": "+47 948 48 271",
     "email": "post@landaozonservice.no",
     "url": "https://landaozonservice.no/",
-    "description": "Landa Ozonservice tilbyr luktfjerning med ozon i Rogaland og Nord-Jæren. Effektiv fjerning av røyklukt og mugg for både private og bedrifter.",
+    "description": "Landa Ozonservice tilbyr luktfjerning med ozon i og rundt Evenes. Effektiv fjerning av røyklukt og mugg for både private og bedrifter.",
     "areaServed": [
-  { "@type": "Place", "name": "Sandnes" },
-  { "@type": "Place", "name": "Stavanger" },
-  { "@type": "Place", "name": "Sola" },
-  { "@type": "Place", "name": "Randaberg" },
-  { "@type": "Place", "name": "Klepp" },
-  { "@type": "Place", "name": "Bryne" },
-  { "@type": "Place", "name": "Nord-Jæren" },
-  { "@type": "Place", "name": "Rogaland" }
+  { "@type": "Place", "name": "Evenes" },
+  { "@type": "Place", "name": "Fjelldal" },
+  { "@type": "Place", "name": "Harstad" },
+  { "@type": "Place", "name": "Narvik" },
+  { "@type": "Place", "name": "Bjerkvik" },
+  { "@type": "Place", "name": "Tjeldsund" },
+  { "@type": "Place", "name": "Sortland" },
+  { "@type": "Place", "name": "Sør-Troms" }
 ]
   }
   </script>
@@ -286,13 +286,13 @@
 
     <section class="container active" id="home">
         <h2>Luktfjerning på effektiv og økonomisk måte</h2>
-        <p>Vi tilbyr profesjonelle ozonbehandlinger for både private og bedrifter i Rogaland.</p>
+        <p>Vi tilbyr profesjonelle ozonbehandlinger for både private og bedrifter i og rundt Evenes.</p>
         <p>Sliter du med kjellerlukt, røyklukt, lukt fra dyr, og andre typer lukter som ikke gir seg? Vi kan hjelpe deg med nettopp dette!</p>
     </section>
 
     <section class="container" id="services">
         <h2>Tjenester</h2>
-        <p>Vi tilbyr ozonbehandlinger for privatpersoner og bedrifter i Rogaland. Vi har fornøydgaranti: Er ikke lukten helt borte etter en behandling, kommer vi tilbake og gjør en ny kostnadsfri behandling</p>
+        <p>Vi tilbyr ozonbehandlinger for privatpersoner og bedrifter i rundt evenes. Vi har fornøydgaranti: Er ikke lukten helt borte etter en behandling, kommer vi tilbake og gjør en ny kostnadsfri behandling</p>
         <h3>Hvilke lukter kan vi fjerne?</h3>
         <p>I hovedsak alle typer lukter, her er noen eksempler:</p>
         <ul>
@@ -304,14 +304,14 @@
             <li>Kjemiske lukter og avgasser</li>
             <li>Bil- og båtlukt</li>
         <h2>Veiledende priser</h2>
-        <p>Tillegg for reise utenfor Nord-Jæren kan forekomme, dette blir avtalt i forkant</p>
+        <p>Tillegg for reise utenfor Evenes kan forekomme, dette blir avtalt i forkant</p>
         <ul>
-            <li>Bil: 1000,-</li>
+            <li>Bil: 1500,-</li>
             <li>Bobil: 2000,-</li>
             <li>Båt: 2000,-</li>
-            <li>Leilighet opp til 60kvm: 3000,-</li>
-            <li>Leilighet over 60kvm: 4000,-</li>
-            <li>Enebolig over flere etasjer: 5000,-</li>
+            <li>Leilighet opp til 60kvm: 4000,-</li>
+            <li>Leilighet over 60kvm: 5000,-</li>
+            <li>Enebolig over flere etasjer: 6000,-</li>
         </ul>
     </section>
 
@@ -336,7 +336,7 @@
         <div style="flex: 2 1 400px;">
             <h2>Om oss</h2>
             <p>
-                Landa Ozonservice er et lokalt firma som opererer i Rogaland og spesialiserer seg på luktfjerning ved bruk av ozongass. Vi har god kunnskap innenfor faget og setter kundens behov i fokus.
+                Landa Ozonservice er et lokalt firma som til vanlig opererer i Rogaland, men grunnet studie flyttet drift opp til Evenes i Nord-Norge ut 2025. Vi spesialiserer oss på luktfjerning ved bruk av ozongass. Vi har god kunnskap innenfor faget og setter kundens behov i fokus.
             </p>
             <p>
                 Vår visjon er å tilby et luktfritt og hygienisk miljø på en trygg og miljøvennlig måte.
@@ -385,3 +385,4 @@
     </script>
 </body>
 </html>
+
