Fix HTML formatting and structure
Fikset siste "Evenes" i overføringen av firmaet

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="bn2C3t2c0h8CyqTnYEzkLOcxG6jBjIAdyj1IPSXbPH4" />
-  <meta name="description" content="Landa Ozonservice tilbyr profesjonell luktfjerning og ozonbehandling for biler, boliger og næringslokaler i og rundt Evenes. Effektiv, miljøvennlig og trygg luktfjerning.">
+  <meta name="description" content="Landa Ozonservice tilbyr profesjonell luktfjerning og ozonbehandling for biler, boliger og næringslokaler i Rogaland. Effektiv, miljøvennlig og trygg luktfjerning.">
   <meta name="keywords" content="ozonbehandling, luktfjerning, profesjonell luktfjerning, fjerne røyklukt, ozon, muggfjerning, luktfri bolig, Rogaland, Sandnes, Stavanger, Nord-Jæren, Randaberg, Sola, Jæren">
   <meta name="author" content="Landa Ozonservice">
   <meta property="og:title" content="Landa Ozonservice - Profesjonell Luktfjerning i Rogaland">
@@ -292,7 +292,7 @@
 
     <section class="container" id="services">
         <h2>Tjenester</h2>
-        <p>Vi tilbyr ozonbehandlinger for privatpersoner og bedrifter i rundt evenes. Vi har fornøydgaranti: Er ikke lukten helt borte etter en behandling, kommer vi tilbake og gjør en ny kostnadsfri behandling</p>
+        <p>Vi tilbyr ozonbehandlinger for privatpersoner og bedrifter i Rogaland. Vi har fornøydgaranti: Er ikke lukten helt borte etter en behandling, kommer vi tilbake og gjør en ny kostnadsfri behandling</p>
         <h3>Hvilke lukter kan vi fjerne?</h3>
         <p>I hovedsak alle typer lukter, her er noen eksempler:</p>
         <ul>
@@ -385,5 +385,6 @@
     </script>
 </body>
 </html>
+
 
 
